# Scientific-Calculator

./: CMakeLists.txt  main.cpp
Header Files/: BasitHesapMakinesi.h  Faktöriyel.h  SigmaHesapMakinesi.h  derecedonusturma.h  kokalma.h  logoritma.h  pisagor.h  trigonemetri.h  ungenalan.h
Source Files/: BasitHesapMakinesi.cpp  Faktöriyel.cpp  SigmaHesapMakinesi.cpp  derecedonusturma.cpp  kokalma.cpp  logoritma.cpp  pisagor.cpp  trigonemetri.cpp  ungenalan.cpp
